--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+ "homepage": "https://Mitansh-09.github.io/Job-Listing-Portal",
   "name": "job-listing-mini-portal",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
